--- a/package.json
+++ b/package.json
@@ -8,26 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.11",
-    "expo": "^44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "react-navigation": "^4.4.4",
-    "react-navigation-header-buttons": "^6.3.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "expo": "^41.0.0",
+    "expo-file-system": "~11.0.2",
+    "expo-image-picker": "~10.1.4",
+    "expo-permissions": "~12.0.1",
+    "expo-sqlite": "^6.0.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^3.11.1",
+    "react-navigation-header-buttons": "^3.0.1",
     "react-navigation-stack": "^2.10.4",
-    "react-redux": "^7.2.6",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1"
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "babel-preset-expo": "8.3.0"
   },
   "private": true
 }
